# nticket-contract

./: .gitignore  Cargo.toml  README.md  package.json
src/: event.rs  lib.rs  lib_example.rs
