[package]
name = "nticket-contract"
version = "0.1.0"
authors = ["Irfianto <irfi@paras.id>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "3.1.0"
near-contract-standards = "3.2.0"
serde = "1"
serde_json = "1"
serde_with = "1"
urlencoding = "2.1.0"
rand = "0.7.0"
ed25519-dalek = "1"